| Summary: | ASTERISK-26391: Consoles do not display verbose logger messages even when requested. | ||||
| Reporter: | Marcelo Terres (mhterres) | Labels: | |||
| Date Opened: | 2016-09-20 07:42:01 | Date Closed: | 2016-09-21 13:00:11 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | . I did not set the category correctly. | ||
| Versions: | 14.0.0-rc1 GIT | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Ubuntu 14.04.5 - Linux rtc 4.5.5-x86_64-linode69 #3 SMP Fri May 20 15:25:13 EDT 2016 x86_64 x86_64 x86_64 GNU/Linux | Attachments: | |||
| Description: | In older versions, when I call rasterisk, I receive some informations
about it. Fox example: [root@pbx2 ~]# rasterisk Asterisk 11.22.0, Copyright (C) 1999 - 2013 Digium, Inc. and others. Created by Mark Spencer <markster@digium.com> Asterisk comes with ABSOLUTELY NO WARRANTY; type 'core show warranty' for details. This is free software, with components licensed under the GNU General Public License version 2 and other licenses; you are welcome to redistribute it under certain conditions. Type 'core show license' for details. ========================================================================= Running as user 'asterisk' Running under group 'asterisk' Connected to Asterisk 11.22.0 currently running on pbx2 (pid = 1461) pbx2*CLI> Disconnected from Asterisk server Asterisk cleanly ending (0). Executing last minute cleanups But after upgrade to Asterisk 14 rc1, even if I use the sample configuration files, I didn't get any information when call rasterisk. root@rtc:/usr/local/src/asterisk-14.0.0-rc1# rasterisk rtc*CLI> Is that expected? | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-20 07:42:02.533-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Marcelo Terres (mhterres) 2016-09-20 07:43:36.389-0500 Just to let you know: Jonathan H in Asterisk User Mailing List reports something related: "Great! Thanks, team, but just before I file a bug.. No matter how many v and d I put, when I now do "dialplan reload" in v14, it just says "Dialplan reloaded". Previously, it used to give some info, and I could scroll back and see if there were any obvious errors in the dialplan. Is this and intended change, something I've done wrong, or a bug that needs filing?" I noticed that the same happens here. By: Corey Farrell (coreyfarrell) 2016-09-20 08:07:11.709-0500 I can confirm this, using both 'asterisk -cv' and 'asterisk -rv' no ast_verbose messages are displayed. Both work correctly in Asterisk 13. This does not effect logger output to files, I verified that uncommenting the 'full' output channel in {{logger.conf}} still works correctly. By: George Joseph (gjoseph) 2016-09-20 08:09:36.425-0500 Yeah, me too. By: George Joseph (gjoseph) 2016-09-20 09:22:28.242-0500 Just an update... There was an undocumented behavior change between 13 and 14 where in 14's logger.conf you MUST specify "verbose" on the console channel where in 13 "verbose" was implied. Temporarily you can simply add "verbose" to the console channel in logger.conf but there's a fix in the works to make it implied again. By: Corey Farrell (coreyfarrell) 2016-09-20 10:55:39.585-0500 I've submitted reviews to fix the behavior: 14: https://gerrit.asterisk.org/3932 and https://gerrit.asterisk.org/3934 master: https://gerrit.asterisk.org/3933 and https://gerrit.asterisk.org/3935 The first review of each branch actually fixes an error when 'logger.conf' is missing or invalid. The second review's fix the verbose issue but require the first review. | ||||